fixing html errors and fixed top story not showing in small view

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,5 +1,6 @@
 @media (min-width: 768px) {
-  #a-login {
+  #a-login,
+  #a-login-2 {
     font-size: 18px;
     text-decoration: none;
   }
